--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<H5>Heading 5</H5>
 	<h6>Heading 6</h6>
 
-	<p> THis is the paragraph for my webpage</p>
-	
+	<p> This is the paragraph for my webpage
+	Trying out<i>Italic</i>
+	</p>
+
+
 </html>
