--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<H5>Heading 5</H5>
 	<h6>Heading 6</h6>
 
-	<p> This is the paragraph for my webpage
-	Trying out<i>Italic</i>
+	<p> This is the paragraph for my webpage<br>
+	Trying out <i>Italic</i> <br>
+	Trying out <b>BOLD</b><br>
 	</p>
 
 
