5. Added an anchor element

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 	Trying out <i>Italic</i> <br>
 	Trying out <b>BOLD</b><br>
 	</p>
-
+	<p>An anchor tag <a href="https://github.com/sachinmathewjose">GITHUB</a></p>
 
 </html>
