6.Added unordered list

--- a/index.html
+++ b/index.html
@@ -16,4 +16,12 @@
 	</p>
 	<p>An anchor tag <a href="https://github.com/sachinmathewjose">GITHUB</a></p>
 
+	<p> Unordered list
+	<ul>
+		<li>1. ONE</li>
+		<li>2. TWO</li>
+		<li>3. THREE</li>
+	</ul>
+	</p>
+	
 </html>
