--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 	</p>
 	<p>An anchor tag <a href="https://github.com/sachinmathewjose">GITHUB</a></p>
 
+	<p>
+	<blockquote> This text is a quote</blockquote>	
+	</p>
+
 	<p> Unordered list
 	<ul>
 		<li>1. ONE</li>
@@ -23,5 +27,5 @@
 		<li>3. THREE</li>
 	</ul>
 	</p>
-	
+
 </html>
