--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</p>
 
 	<hr>
-
+	<div>
 	<p> Unordered list
 	<ul>
 		<li>1. ONE</li>
@@ -31,4 +31,5 @@
 	</p>
 	<hr>
 	<img src="https://web.njit.edu/~sj555/projects/homework1//sac.JPG" alt="photo">
+	</div>
 </html>
